update Java Validation

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -169,7 +169,7 @@
                             aria-label="Default select example"
                             required>
                     </select>
-
+                    <div id="outputEdit"></div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" id="editBtn"
                                 onclick="editUser()">Edit
