--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-2" style="padding-top: 15px">
                 <a class="admin" href="/admin" sec:authorize="hasRole('ADMIN')">Admin</a>
-                <a class="user" href="/user" sec:authorize="hasRole('USER')">User</a>
+                <a class="user" href="/user" sec:authorize="hasRole('USER') or hasRole('ADMIN')">User</a>
             </div>
             <div class="col" style="background: #f8f9fa;">
                 <h1>User information-page</h1>
